<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DeliveryWear</string>
    <string name="Welcome">Welcome to RoboLink Watch</string>
    <string name="enter_pwd">Enter password</string>
    <string name="time">9:55</string>
    <string name="time_standby">03:34</string>
    <string name="date_standby">Oct 9, 2023</string>
    <string name="pls_enter_pwd">Please enter password</string>
    <string name="binding_success">Binding Successful</string>
    <string name="entering_project">Entering Project In 3s</string>
    <string name="switch_project">Would You Like To Switch Projects?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_robot">My Robot</string>
    <string name="robot_id">YH12345667787979786755645442</string>
    <string name="robot_battery">60%</string>
    <string name="robot_status">Idle Status</string>
    <string name="robot_status2">Shutdown</string>
    <string name="summon">SUMMON</string>
    <string name="point_name">A101</string>
    <string name="area_name">Area-A</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="settings">Settings</string>
    <string name="project">Project</string>
    <string name="gateway">Gateway</string>
    <string name="us_server">US Server</string>
    <string name="hk_server">HK Server</string>
    <string name="cn_server">CN Server</string>
    <string name="dev_server">DEV Server</string>
    <string name="gateway_address">https://robot.csstrobot.com:8443</string>
    <string name="project_name">Kedo Chinese Restaurant</string>
    <string name="got_it">GOT IT</string>
    <string name="loading">Loading…</string>
    <string name="wait_a_moment">Wait A Moment…</string>
    <string name="no_robot">Oops, Your Project Has No Robots Bound To It！</string>
    <string name="error_pwd_hint">Incorrect password</string>
    <string name="heading">Heading To A101</string>
    <string name="arriving">Arriving To A101</string>
    <string name="heading_item">Close Page In 5s</string>
    <string name="heading_cancel" tools:ignore="ButtonCase">CANCEL</string>
</resources>