<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="208dp"
        android:layout_height="228dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:alignmentMode="alignMargins"
        app:columnCount="3"
        app:rowCount="6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:layout_column="0"
            app:layout_row="0">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tv_enter_password"
                style="@style/enter_pwd_num"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="14sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ed_hint"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_horizontal|center_vertical"
                style="@style/enter_pwd_num"
                android:layout_centerHorizontal="true"
                android:text="@string/pls_enter_pwd"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/clear_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="4dp"
                android:src="@mipmap/clear_img"
                android:visibility="gone" />
        </RelativeLayout>

        <!-- Add buttons 1-9 and 0 programmatically -->
        <Button
            android:id="@+id/button0"
            style="@style/KeyButton"
            android:text="@string/num0"
            app:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_marginStart="71dp"
            app:layout_row="4" />

        <!-- Buttons from 1 to 9 -->
        <!-- Row 1 -->
        <Button
            android:id="@+id/button1"
            style="@style/KeyButton"
            android:text="@string/num1"
            app:layout_column="0"
            android:layout_marginTop="5dp"
            app:layout_row="1" />

        <Button
            android:id="@+id/button2"
            style="@style/KeyButton"
            android:text="@string/num2"
            android:layout_marginTop="5dp"
            android:layout_marginStart="71dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button3"
            style="@style/KeyButton"
            android:text="@string/num3"
            android:layout_marginTop="5dp"
            android:layout_marginStart="142dp"
            app:layout_column="0"
            app:layout_row="1" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/button4"
            style="@style/KeyButton"
            android:text="@string/num4"
            android:layout_marginTop="5dp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button5"
            style="@style/KeyButton"
            android:text="@string/num5"
            android:layout_marginTop="5dp"
            android:layout_marginStart="71dp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button6"
            style="@style/KeyButton"
            android:text="@string/num6"
            android:layout_marginTop="5dp"
            android:layout_marginStart="142dp"
            app:layout_column="0"
            app:layout_row="2" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/button7"
            style="@style/KeyButton"
            android:text="@string/num7"
            android:layout_marginTop="5dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button8"
            style="@style/KeyButton"
            android:text="@string/num8"
            android:layout_marginTop="5dp"
            android:layout_marginStart="71dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button9"
            style="@style/KeyButton"
            android:text="@string/num9"
            android:layout_marginTop="5dp"
            android:layout_marginStart="142dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button_got_it"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            style="@style/GotIt"
            app:layout_column="0"
            app:layout_row="5"
            android:text="@string/got_it" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/error_pwd_hint"
        style="@style/error_pwd_hint"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/lexend_medium"
        android:gravity="center"
        android:text="@string/error_pwd_hint"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
