<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gateway"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gateway_tv"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/gateway"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/us_server"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/robot_card_bc"
        app:cardCornerRadius="20dp"
        android:textSize="16sp">

        <TextView
            android:id="@+id/us_server_tv"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/lexend_medium"
            android:textColor="@color/white"
            android:text="@string/us_server"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hk_server"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/robot_card_bc"
        app:cardCornerRadius="20dp"
        android:textSize="16sp">

        <TextView
            android:id="@+id/hk_server_tv"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/lexend_medium"
            android:textColor="@color/white"
            android:text="@string/hk_server"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cn_server"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/robot_card_bc"
        app:cardCornerRadius="20dp"
        android:textSize="16sp">

        <TextView
            android:id="@+id/cn_server_tv"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/lexend_medium"
            android:textColor="@color/white"
            android:text="@string/cn_server"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dev_server"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/robot_card_bc"
        app:cardCornerRadius="20dp"
        android:textSize="16sp">

        <TextView
            android:id="@+id/dev_server_tv"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/lexend_medium"
            android:textColor="@color/white"
            android:text="@string/dev_server"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>