<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/robot_card"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/robot_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/robot_id"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:layout_margin="14dp"
            android:text="@string/robot_id"
            android:fontFamily="@font/lexend_medium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/robot_lighting_green"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="62dp"
            android:src="@mipmap/lightning_green_img"
            app:layout_constraintTop_toBottomOf="@+id/robot_id"
            android:layout_alignStart="@id/robot_id" />

        <ImageView
            android:id="@+id/robot_lighting_red"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="62dp"
            android:visibility="invisible"
            android:src="@mipmap/lightning_red_img"
            app:layout_constraintTop_toBottomOf="@+id/robot_id"
            android:layout_alignStart="@id/robot_id" />

        <TextView
            android:id="@+id/robot_battery"
            android:layout_width="29dp"
            android:layout_height="17dp"
            android:layout_alignStart="@id/robot_lighting_green"
            android:layout_marginStart="16dp"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/lexend_400"
            android:gravity="bottom"
            android:text="@string/robot_battery"
            android:textColor="@color/default_green"
            android:textSize="14sp" />

        <Button
            android:id="@+id/robot_summon"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_marginTop="86dp"
            android:layout_marginBottom="14dp"
            android:layout_alignStart="@id/robot_id"
            style="@style/robot_summon"
            android:text="@string/summon"
            android:gravity="center"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>