<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/heading"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/heading_img"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:src="@mipmap/heading_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/heading_tx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_tx"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/lexend_medium"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/heading_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_item"
        android:layout_width="208dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/lexend_medium"
        android:gravity="center"
        android:text="@string/heading_item"
        android:alpha="0.5"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/heading_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/heading_cancel"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginTop="188dp"
        android:layout_marginBottom="16dp"
        style="@style/heading_cancel"
        android:text="@string/heading_cancel"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>